[package]
name = "url_shortener"
version = "0.1.1"
authors = ["Michael Lohr <michael@lohr.dev>"]
edition = "2021"

[dependencies]
rocket = "0.5.0-rc.2"
serde = { version = "1.0", features = ["derive"] }
sled = "0.34.7"
sled-extensions = { version = "0.2.0", features = ["bincode"]}
thiserror = "1.0.32"
rand = "0.8.5"

# [dependencies.rocket_sync_db_pools]
# features = ["diesel_sqlite_pool"]

[dependencies.rocket_dyn_templates]
version = "0.1.0-rc.2"
features = ["tera"]
